<resources>
    <string name="app_name">MeetingReminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_reminder_button_description">Add reminder button</string>
    <string name="client_photo_description">Аватарка клиента</string>
    <string name="image_no_reminder_description">Список напоминаний пуст</string>
    <string name="no_reminders_description">Нет напоминаний</string>
    <string name="reminder_title">Название*</string>
    <string name="reminder_client">Клиент*</string>
    <string name="reminder_client_email">Email*</string>
    <string name="reminder_date">Дата встречи*</string>
    <string name="reminder_time">Время</string>
    <string name="button_save">Сохранить</string>
    <string name="full_name_template">%s %s %s</string>
    <string name="empty_field_error">Поле не должно быть пустым</string>
    <string name="date_picker_title">Дата встречи</string>
    <string name="time_picker_title">Время встречи</string>
    <string name="incorrect_date">Неверная дата</string>
    <string name="incorrect_time">Неверное время</string>
    <string name="btn_retry_load">Повторить</string>
    <string name="time_pattern">%s:%s</string>
    <string name="time_format_pattern">HH:mm</string>
    <string name="date_pattern">dd.MM.yyyy</string>
    <string name="client_load_error">Ошибка при загрузке</string>
    <string name="load_clients_error_toast">Ошибка загрузки</string>
</resources>