<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.fragments.AddReminderFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_input_field_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reminder_title"
            android:theme="@style/Widget.MeetingReminder.EditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_reminder_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconDrawable="@drawable/ic_baseline_contacts"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_reminder_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reminder_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/reminder_client"
            android:theme="@style/Widget.MeetingReminder.EditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_reminder_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:endIconDrawable="@drawable/ic_arrow_drop_down"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@+id/ti_reminder_time"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_reminder_client">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reminder_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/reminder_date"
            android:theme="@style/Widget.MeetingReminder.EditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_reminder_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconDrawable="@drawable/ic_arrow_drop_down"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_input_field_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ti_reminder_date"
        app:layout_constraintTop_toBottomOf="@id/ti_reminder_client">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="time"
            android:hint="@string/reminder_time"
            android:textColorHint="#757575"
            android:theme="@style/Widget.MeetingReminder.EditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_reminder_date" />
    <!--app:backgroundTint="@color/blue_light"-->
</androidx.constraintlayout.widget.ConstraintLayout>